--- a/Estampados_Impresionesv2/Quienes_somos.html
+++ b/Estampados_Impresionesv2/Quienes_somos.html
@@ -168,7 +168,7 @@ En nuestra tienda de estampados e impresiones, su creatividad no tiene límites.
           </div>
       </div>
       <div class="text-center p-3 bg-secondary">
-          © 2025 DOGICAT
+          © 2025 Todos los derechos reservados
       </div>
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
