--- a/Estampados_Impresionesv2/catalogo.html
+++ b/Estampados_Impresionesv2/catalogo.html
@@ -142,7 +142,7 @@
           </div>
       </div>
       <div class="text-center p-3 bg-secondary">
-          © 2025 2025 Todos los derechos reservados
+          © 2025 Todos los derechos reservados
       </div>
   </footer>
 
