--- a/Estampados_Impresionesv2/index.html
+++ b/Estampados_Impresionesv2/index.html
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="text-center p-3 bg-secondary">
-            © 2025 DOGICAT
+            © 2025 Todos los derechos reservados
         </div>
     </footer>
     
