--- a/Estampados_Impresionesv2/vision.html
+++ b/Estampados_Impresionesv2/vision.html
@@ -118,7 +118,7 @@
           </div>
       </div>
       <div class="text-center p-3 bg-secondary">
-          © 2025 DOGICAT
+          © 2025 Todos los derechos reservados
       </div>
   </footer>
 
